syntax = "proto3";

package yandex.cloud.events.network;

import "google/rpc/status.proto";
import "google/protobuf/field_mask.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/validation.proto";
import "yandex/cloud/vpc/v1/route_table.proto";
import "yandex/cloud/events/options.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/vpc;network";
option java_package = "yandex.cloud.api.events.network";

message CreateRouteTable {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    RequestParameters request_parameters = 8 [(required) = true];

    Response response = 9 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
        CANCELLED = 4;
    }

    message EventDetails {
        string route_table_id = 1 [(required) = true];
        string route_table_name = 2;
        string network_id = 3 [(required) = true];
        string network_name = 4;
        repeated yandex.cloud.vpc.v1.StaticRoute static_routes = 5;
    }

    message RequestParameters {
        string folder_id = 1;
        string name = 2;
        map<string, string> labels = 3;
        string network_id = 4;
        repeated yandex.cloud.vpc.v1.StaticRoute static_routes = 5;
    }
}

message UpdateRouteTable {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    RequestParameters request_parameters = 8 [(required) = true];

    Response response = 9 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
    }

    message EventDetails {
        string route_table_id = 1 [(required) = true];
        string route_table_name = 2;
        string network_id = 3 [(required) = true];
        string network_name = 4;
        repeated yandex.cloud.vpc.v1.StaticRoute static_routes = 5;
    }

    message RequestParameters {
        string route_table_id = 1;
        google.protobuf.FieldMask update_mask = 2;
        string name = 3;
        map<string, string> labels = 4;
        repeated yandex.cloud.vpc.v1.StaticRoute static_routes = 5;
    }
}

message DeleteRouteTable {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    RequestParameters request_parameters = 8 [(required) = true];

    Response response = 9 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
    }

    message EventDetails {
        string route_table_id = 1 [(required) = true];
        string route_table_name = 2;
        string network_id = 3 [(required) = true];
        string network_name = 4;
    }

    message RequestParameters {
        string route_table_id = 1;
    }
}

message MoveRouteTable {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    RequestParameters request_parameters = 8 [(required) = true];

    Response response = 9 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
    }

    message EventDetails {
        string route_table_id = 1 [(required) = true];
        string route_table_name = 2;
        string network_id = 3 [(required) = true];
        string network_name = 4;
        string source_folder_id = 5;
        string destination_folder_id = 6;
    }

    message RequestParameters {
        string route_table_id = 1;
        string destination_folder_id = 2;
    }
}

message RouteTableAttached {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    RequestParameters request_parameters = 8 [(required) = true];

    Response response = 9 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
    }

    message EventDetails {
        string route_table_id = 1 [(required) = true];
        string route_table_name = 2;
        string network_id = 3 [(required) = true];
        string network_name = 4;
        string subnet_id = 5 [(required) = true];
        string subnet_name = 6;
    }

    message RequestParameters {
        // Additional event that may be generated during UpdateSubnet API call, no "request" here
    }
}

message RouteTableDetached {
    option (include) = true;

    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];
    EventStatus event_status = 5 [(required) = true];

    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    RequestParameters request_parameters = 8 [(required) = true];

    Response response = 9 [(required) = true];

    enum EventStatus {
        EVENT_STATUS_UNSPECIFIED = 0;
        STARTED = 1;
        ERROR = 2;
        DONE = 3;
    }

    message EventDetails {
        string route_table_id = 1 [(required) = true];
        string route_table_name = 2;
        string network_id = 3 [(required) = true];
        string network_name = 4;
        string subnet_id = 5 [(required) = true];
        string subnet_name = 6;
    }

    message RequestParameters {
        // Additional event that may be generated during UpdateSubnet API call, no "request" here
    }
}
